# hexagonal-fastapi-starter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  hexagonal_fastapi.db  pyproject.toml  requirements.txt
app/: main.py
app/application/: exceptions.py
app/application/dtos/: __init__.py  user_dtos.py
app/application/ports/: __init__.py  user_repository.py
app/application/use_cases/: __init__.py  create_user.py  get_user.py  list_users.py
app/domain/: exceptions.py
app/domain/entities/: user.py
app/domain/services/: __init__.py  password_service.py
app/domain/value_objects/: __init__.py  email.py  password.py
app/infrastructure/: config.py  container.py  logging.py  middleware.py
app/infrastructure/database/: connection.py
app/infrastructure/database/models/: __init__.py  base.py  user.py
app/infrastructure/database/repositories/: __init__.py  user_repository.py
app/presentation/api/: health.py  users.py
docker/nginx/: nginx.conf
docker/postgres/: init.sql
tests/unit/: test_config.py  test_improved_logging.py  test_logging.py  test_middleware.py
tests/unit/application/: test_create_user_use_case.py
tests/unit/domain/: test_domain_services.py  test_user_entity.py  test_value_objects.py
tests/unit/infrastructure/: test_container.py  test_database.py  test_user_repository.py
tests/unit/presentation/: test_fastapi_app.py
tests/unit/presentation/api/: test_users.py
